# Locus

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
LocusEditor/: CMakeLists.txt
LocusEditor/src/: main.cpp
LocusEngine/: CMakeLists.txt
LocusEngine/content/shaders/: CMakeLists.txt  gradient.comp  triangle.vert
LocusEngine/include/: Locus.hpp
LocusEngine/src/Base/: Array.hpp  Asserts.hpp  Base.hpp  Defines.hpp  Handles.hpp  Logging.cpp  Logging.hpp  Object.hpp  Singleton.hpp  SmartPointers.hpp
LocusEngine/src/Core/: DisplayManager.hpp  Engine.cpp  Engine.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
LocusEngine/src/Graphics/: GraphicsDevice.cpp  GraphicsDevice.hpp  GraphicsManager.hpp
LocusEngine/src/Math/: Math.hpp  Numerics.cpp  Numerics.hpp
LocusEngine/src/Platform/: Platform.cpp  Platform.hpp
LocusEngine/src/Platform/LSDL/: LSDLDisplayManager.cpp  LSDLDisplayManager.hpp  LSDLPlatform.cpp  LSDLPlatform.hpp  LSDLWindow.cpp  LSDLWindow.hpp
LocusEngine/src/Platform/LVK/: LVKBuffer.cpp  LVKBuffer.hpp  LVKCommon.hpp  LVKDescriptor.cpp  LVKDescriptor.hpp  LVKGraphicsDevice.cpp  LVKGraphicsDevice.hpp  LVKGraphicsManager.cpp  LVKGraphicsManager.hpp  LVKHelpers.cpp  LVKHelpers.hpp  LVKImage.cpp  LVKImage.hpp  LVKPipeline.cpp  LVKPipeline.hpp  LVKResources.cpp  LVKResources.hpp  LVKSwapchain.hpp  LVKTypes.hpp
